--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -33,17 +33,29 @@ h4{
   position: fixed;
   width: calc((100vw - 192px) *.25);
   left: 96px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
   height: 100vh;
 }
 #projectMatrix{
   grid-area: projects;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  justify-content: space-evenly;
 }
 div#myPhoto {
+  cursor: pointer;
   background-image: url('/images/avatar.png');
   background-size: auto 100%;
   width: 10vh;
   height: 10vh;
   animation: avatarSwitch 3s infinite step-start;
+}
+svg.oval.mask use {
+  transform: scale(0.0011, 0.001) translate(-10%);
 }
 
 @keyframes avatarSwitch{
@@ -79,8 +91,7 @@ svg{
 }
 .ProjectBlock {
   height: 20vw;
-  float: left;
-  max-width: 33%;
+  max-width: 40vw;
   min-width: 19vw;
   cursor: pointer;
 }
