--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -5,7 +5,9 @@
   --x: 12px;
   --x2: 24px;
   --x3: 36px;
-  --blue: #DCF9FF
+  --blue: #DCF9FF;
+  --margin: 96px;
+  --left: 360px;
 }
 body{
   background-color: var(--blue);
@@ -22,28 +24,24 @@ h4{
 }
 #MainContainer{
   display: grid;
-  grid-template-columns: 96px 1fr 3fr 96px;
+  grid-template-columns: var(--margin) var(--left) 3fr var(--margin);
   width:100%;
   height:100vh;
   grid-template-areas: 
-  '. leftColumn projects .'
+  '. leftColumn projects projects'
 }
 #LeftColumn{
   grid-area: leftColumn;
-  position: fixed;
-  width: calc((100vw - 192px) *.25);
-  left: 96px;
   display: flex;
   flex-flow: column;
   justify-content: center;
-  height: 100vh;
 }
 #projectMatrix{
-  grid-area: projects;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   align-content: center;
+  margin-right: var(--margin);
   justify-content: space-evenly;
 }
 div#myPhoto {
@@ -94,10 +92,10 @@ svg{
   max-width: 40vw;
   min-width: 19vw;
   cursor: pointer;
+  position: relative;
 }
 .ProjectBlock:hover {
   z-index: 5;
-  position: relative;
 }
 .ProjectBlock:hover .projectText{
   opacity: 1;
@@ -125,14 +123,31 @@ svg.circle.mask {
 }
 div#RightPanel {
   position: fixed;
+  overflow: hidden scroll;
   background-color: white;
   height: 100vh;
   z-index: 7;
-  width: calc((100vw - 192px) * .75 + 96px);
+  width: calc(100vw - (var(--left) + var(--margin)));
   right: 0px;
   transform: translateX(100%);
   transition: transform 500ms;
 }
 div#RightPanel.active {
   transform: translateX(0%);
+}
+
+#Contacts::before{
+  content: '';
+  display: block;
+  width: 420px;
+  height: 227px;
+  position: absolute;
+  transform: translate(-18%, -25%);
+  background-image: url(/images/border.svg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+div#clipContainer {
+  grid-area: projects;
+  overflow: hidden scroll;
 }
