--- a/src/stylesheets/desktop.css
+++ b/src/stylesheets/desktop.css
@@ -145,7 +145,7 @@ div#RightPanel {
     transition: transform 500ms;
     display: grid;
     grid-template-columns: repeat(9, 11.1%);
-    grid-template-rows: 15vh 25vh 20vh 1fr;
+    grid-template-rows: var(--x3) 15vh 25vh 20vh 1fr;
 
 }
 
@@ -187,7 +187,7 @@ svg.oval.mask {
 
 .projectHeader {
     grid-column: 1/10;
-    grid-row: 1/3;
+    grid-row: 1/4;
     background-size: cover;
     background-position: 50%;
 }
@@ -195,12 +195,12 @@ svg.oval.mask {
 .ProjectBlock.inCase {
     grid-column: 3;
     cursor: default;
-    grid-row: 2;
+    grid-row: 3;
 }
 
 .ProjectContent {
     grid-column: 1 / 10;
-    grid-row: 4;
+    grid-row: 5;
 }
 
 .textSection {
@@ -261,4 +261,18 @@ h4#Contacts {
     grid-column: 1/10;
     width: 100%;
     min-height: 40vh;
+}
+.closeButton {
+    background-color: white;
+    grid-column: 1;
+    height: var(--x4);
+    width: var(--x4);
+    margin-left: var(--x3);
+    grid-row: 2;
+    z-index: 9;
+    cursor: pointer;
+    background-image: url(/images/cross.svg);
+    background-size: 80%;
+    background-position: 50%;
+    background-repeat: no-repeat;
 }
