--- a/src/stylesheets/desktop.css
+++ b/src/stylesheets/desktop.css
@@ -139,7 +139,7 @@ div#RightPanel {
     background-color: white;
     height: 100vh;
     z-index: 7;
-    width: calc(100vw - (var(--left) + var(--margin) + var(--x3) * 2));
+    width: calc(100vw - var(--left) - var(--margin) - var(--x3) * 2);
     right: 0px;
     transform: translateX(100%);
     transition: transform 500ms;
