--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -66,7 +66,7 @@ h4 {
   text-transform: uppercase;
   cursor: pointer;
   margin-bottom: var(--x3);
-  margin-top: var( --x4);
+  margin-top: var( --x3);
 }
 span{
   font-size: 18px;
@@ -151,11 +151,13 @@ svg {
 
 .ProjectBlock {
   height: 340px;
-  max-width: 40vw;
-  min-width: 19vw;
   cursor: pointer;
   position: relative;
   width: 340px;
+}
+#projectMatrix .ProjectBlock {
+  max-width: 40vw;
+  min-width: 19vw;
 }
 
 .ProjectBlock:hover {
@@ -185,7 +187,7 @@ circle {
   flex-flow: column;
   transition: opacity 500ms;
   position: relative;
-  justify-content: space-between;
+  justify-content: center;
   width: 60%;
   height: 60%;
   margin-left: 20%;
@@ -193,6 +195,10 @@ circle {
   color: white;
   opacity: 0;
   z-index: 6;
+}
+
+.projectText h2 {
+  margin-top: var(--x);
 }
 
 svg.circle.mask {
