--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -61,12 +61,9 @@ h4 {
 }
 
 #myPage {
-  font-size: var(--x3);
   font-weight: 400;
   text-transform: uppercase;
   cursor: pointer;
-  margin-bottom: var(--x3);
-  margin-top: var( --x3);
 }
 span{
   font-size: 18px;
@@ -105,7 +102,6 @@ span{
 
 div#myPhoto {
   cursor: pointer;
-  margin-bottom: var(--x2);
   background-image: url('/images/avatar.png');
   background-size: auto 100%;
   width: 10vh;
@@ -173,6 +169,9 @@ circle {
   transition: transform 600ms;
   will-change: transform;
 }
+svg{
+  overflow: hidden;
+}
 
 .ProjectBlock circle {
   transform: scale3d(0.01, 0.01, 0.01);
@@ -221,6 +220,9 @@ div#RightPanel {
   grid-template-rows: var(--x3) 200px 200px 200px 1fr;
 
 }
+div#RightPanel.aboutMe{ 
+  grid-template-rows: var(--x3) 200px 200px 100px 1fr
+}
 
 div#RightPanel.active {
   transform: translateX(0%);
@@ -248,7 +250,8 @@ div#clipContainer {
 
 .tagsContainer {
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
+  flex-wrap: wrap;
 }
 
 svg.oval.mask {
@@ -278,12 +281,6 @@ svg.oval.mask {
   grid-row: 5;
 }
 
-.textSection {
-  margin-bottom: var(--x2);
-  display: grid;
-  grid-template-columns: repeat(9, 11.1%);
-}
-
 .textSection h4 {
   grid-column: 3;
   font-weight: 800;
@@ -305,11 +302,6 @@ svg.oval.mask {
   transform: translateX(-20%);
 }
 
-.imgSection {
-  display: grid;
-  grid-template-columns: repeat(9, 11.1%);
-}
-
 .imgSection.center img {
   grid-column: 3/8;
   width: 100%;
@@ -320,12 +312,6 @@ svg.oval.mask {
   grid-column: 1/10;
   width: 100%;
   margin-bottom: var(--x2);
-}
-
-.videoSection {
-  display: grid;
-  margin-bottom: var(--x2);
-  grid-template-columns: repeat(9, 11.1%);
 }
 
 .videoSection.center video {
@@ -382,19 +368,9 @@ svg.romb.mask {
 
 .aboutMe .ProjectContent {
   grid-column: 1 / 10;
-  grid-row: 3;
+  grid-row: 5;
 }
 
-.listSection {
-  display: grid;
-  margin-bottom: var(--x3);
-  grid-template-columns: repeat(9, 1fr);
-}
-.jobSection {
-  display: grid;
-  margin-bottom: var(--x3);
-  grid-template-columns: repeat(9, 1fr);
-}
 .jobSection h4 {
   font-weight: 800;
   grid-column: 3;
@@ -431,4 +407,18 @@ li:before {
   position: absolute;
   transform: translate(-14px, 8px);
   border-radius: var(--x);
+}
+
+
+
+.langSwitcher {
+  margin-left: var(--x4);
+  cursor:pointer
+}
+.langSwitcher.active {
+  color: red;
+}
+div#avatarRow {
+  display: flex;
+  align-items: center;
 }
