--- a/src/stylesheets/mobile.css
+++ b/src/stylesheets/mobile.css
@@ -212,4 +212,10 @@
         justify-content: space-between;
         margin-bottom: var(--x2);
     }
+    .aboutMe .ProjectContent {
+        margin-top: 60px;
+    }
+    .listSection h4{
+        margin-bottom: var(--x2);
+    }
 }
